--- a/src/ryan_neck_controller/CMakeLists.txt
+++ b/src/ryan_neck_controller/CMakeLists.txt
@@ -116,11 +116,22 @@ include_directories(
 )
 
 # Declare a C++ library
-add_library(${PROJECT_NAME}
+add_library(${PROJECT_NAME}_core
    src/ryan_neck_controller.cpp
    src/dynamic_gesture_generators.cpp
    include/ryan_trajectory_merger/ryan_trajectory_merger.h
- )
+)
+
+add_executable(${PROJECT_NAME}
+   src/ryan_neck_controller_node.cpp
+)
+
+add_executable(controller_test_node
+  src/controller_test_node.cpp
+)
+target_link_libraries(controller_test_node
+  ${catkin_LIBRARIES}
+)
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
@@ -143,7 +154,12 @@ add_library(${PROJECT_NAME}
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 # Specify libraries to link a library or executable target against
+target_link_libraries(${PROJECT_NAME}_core
+   ${catkin_LIBRARIES}
+ )
+
 target_link_libraries(${PROJECT_NAME}
+  ${PROJECT_NAME}_core
    ${catkin_LIBRARIES}
  )
 
